--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,7 @@
   <meta name="theme-color" content="#ffffff">
   <!-- Favicon -->
 
-  <link rel="stylesheet" href="{{ "assets/css/main.css" | relative_url }}" />
+  <link rel="stylesheet" href="{{ "assets/css/main.css" }}" />
   {% if site.theme_config.appearance_toggle %}
     {% include toggle_theme_js.html %}
   {% endif %}
