--- a/_includes/post_list.html
+++ b/_includes/post_list.html
@@ -5,7 +5,7 @@
         <span class="home-date">
           {{ post.date | date: site.theme_config.date_format }}»
         </span>
-        <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
+        <a href="{{ post.url }}">{{ post.title }}</a>
       </li>
     {% endfor %}
   </ul>
