fix: colors, typography (+ removed the cards for now)

--- a/_includes/date_and_social_share.html
+++ b/_includes/date_and_social_share.html
@@ -1,26 +1,25 @@
+{% if page.date %}
 <p class="post-date text-bold">
-  {% if page.author %}
-    <span class="text-upcase">{{ page.author }}</span> / 
-  {% endif %}
-  {% if page.date %}
-    <span class="text-upcase">{{ page.date | date: "%B %Y"}}</span>
-  {% endif %}
+	{% if page.date %}
+	<span class="text-upcase">{{ page.date | date: "%B %Y"}}</span>
+	{% endif %}
 
-{% if site.theme_config.show_reading_time == true %}
-  {% capture words %}
-  {{ content | number_of_words | minus: 180 }}
-  {% endcapture %}
-  {% unless words contains '-' %}
-  {{ words | strip | prepend: '(' | append: ' Words, ' }}
-  {{ words | plus: 180 | divided_by: 180 | append: ' Minutes)' }}
-  {% endunless %}
-{% endif %}
+	{% if site.theme_config.show_reading_time == true %}
+	{% capture words %}
+	{{ content | number_of_words | minus: 180 }}
+	{% endcapture %}
+	{% unless words contains '-' %}
+	{{ words | strip | prepend: '(' | append: ' Words, ' }}
+	{{ words | plus: 180 | divided_by: 180 | append: ' Minutes)' }}
+	{% endunless %}
+	{% endif %}
 </p>
+{% endif %}
 
-{% if site.theme_config.show_tags == true %}
-  <div class="">
-    {% for tag in page.tags %}
-    <span class="tag">{{ tag }}</span>
-    {% endfor %}
-  </div>
+{% if site.theme_config.show_tags == true and page.tags %}
+<div class="">
+	{% for tag in page.tags %}
+	<span class="tag">{{ tag }}</span>
+	{% endfor %}
+</div>
 {% endif %}
