--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -1,35 +1,95 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Inter:wght@400;700&family=Space+Grotesk:wght@300..700&display=swap');
 
-html { height: 100%; }
+html {
+  height: 100%;
+  max-width: 88ch;
+  margin: auto;
+  line-height: 1.75;
+  font-size: 1.1em;
+}
 
 body {
-  font-family:  "Inter", -apple-system, "avenir next", avenir, roboto, noto, ubuntu, "helvetica neue", helvetica, sans-serif;
-  font-size: 1.0rem;
-  line-height: 2;
+  font-family: "Inter", -apple-system, "avenir next", avenir, roboto, noto, ubuntu, "helvetica neue", helvetica, sans-serif;
   margin: 0;
   min-height: 100%;
 }
-pre, code {
+
+footer {
+  margin-top: 4em;
+}
+
+pre,
+code {
   font-family: "Roboto Mono", "Courier New", monospace;
   font-size: 0.9rem;
 }
 
-h2, h3, h4, h5 { margin-top: 1.5em; }
+// no extra margin between two consecutive headings
+h1+h2,
+h2+h3 {
+  margin-top: 0;
+}
 
-hr { margin: 1em 0; }
+
+h1+p,
+h2+p,
+h3+p {
+  margin-top: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Space Grotesk", "Inter", system-ui, -apple-system, avenir, sans-serif;
+  margin: 1em 0em 0.5em 0em;
+}
+
+
+p,
+ul,
+ol {
+  margin-bottom: 0em;
+  color: #1d1d1d;
+  font-family: sans-serif;
+}
+
+ul.horizontal-list {
+  display: flex;
+  margin-top: 0em;
+  padding: 0;
+  flex-wrap: wrap;
+
+  li {
+    display: inline;
+    margin-right: 1em;
+  }
+
+  li a {
+    text-decoration: none;
+    font-weight: normal
+  }
+
+}
+
+
+hr {
+  margin: 1em 0;
+}
 
 hr.page-break {
   text-align: center;
   border: 0;
 
-  &:before { content: '-----' }
-  &:after { content: attr(data-content) '-----' }
+  &:before {
+    content: '-----'
+  }
+
+  &:after {
+    content: attr(data-content) '-----'
+  }
 }
-
-p { margin: 1em 0; }
-
-li { margin: 0.4em 0; }
 
 .w {
   max-width: 720px;
@@ -37,14 +97,17 @@ li { margin: 0.4em 0; }
   padding: 4em 2em;
 }
 
-table, th, td {
+table,
+th,
+td {
   width: 100%;
   border: thin solid black;
   border-collapse: collapse;
   padding: 0.4em;
 }
 
-div.highlighter-rouge pre code, pre code.highlighter-rouge {
+div.highlighter-rouge pre code,
+pre code.highlighter-rouge {
   display: block;
   overflow-x: auto;
   padding: 1em;
@@ -55,7 +118,9 @@ blockquote {
   border: thin solid black;
   padding: 1em;
 
-  p { margin: 0; }
+  p {
+    margin: 0;
+  }
 }
 
 img {
@@ -63,74 +128,114 @@ img {
   display: block;
   margin: 0 auto;
 }
+
+:root {
+  --card-bg: #fef3c7;
+  --card-border: #fbbf24;
+  --card-header: #d97706;
+  --card-text: #b45309;
+}
+
 @mixin light-appearance {
-  html, body {
-      --bg: #FFF;
-      --bg-secondary: #f3f4f6;
-      --headings: #1e293b;
-      --text: #374151;
-      --text-secondary: #6b7280;
-      --links: #6366f1;
-      --highlight: #FFECB2; // light yellow
-      --code-text: #9D174D;
-      --share-text: #999;
+
+  html,
+  body {
+    --bg: #f8fafc;
+    --bg-secondary: #f3f4f6;
+    --headings: #334155;
+    --text: #374151;
+    --text-secondary: #6b7280;
+    --links: #d97706;
+    --highlight: #FFECB2; // light yellow
+    --code-text: #9D174D;
+    --share-text: #999;
   }
 }
+
 // -------------- THEME SWITCHER -------------- //
 @mixin dark-appearance {
-  html, body  {
-      --headings: #fcd374;
-      --links: #b091ff;
-      --highlight: #41C7C7;
-      --bg: #191a1b;
-      --bg-secondary: #1e2127;
-      --text: #adb5bd;
-      --text-secondary: #9CA3AF;
-      --code-text: #91A7FF;
-      --share-text: #C4C4C4;
-  };
+
+  html,
+  body {
+    --headings: #fcd374;
+    --links: #a5f3fc;
+    --highlight: #41C7C7;
+    --bg: #111827;
+    --bg-secondary: #1e2127;
+    --text: #f9fafb;
+    --text-secondary: #9CA3AF;
+    --code-text: #91A7FF;
+    --share-text: #C4C4C4;
+  }
+
+  ;
 }
 
-html[data-theme="dark"] { @include dark-appearance; }
-html[data-theme="light"] { @include light-appearance; }
+html[data-theme="dark"] {
+  @include dark-appearance;
+}
+
+html[data-theme="light"] {
+  @include light-appearance;
+}
 
 @media (prefers-color-scheme: dark) {
-  body[data-theme="auto"] { @include dark-appearance; }
+  body[data-theme="auto"] {
+    @include dark-appearance;
+  }
 }
+
 @media (prefers-color-scheme: light) {
-  body[data-theme="auto"] { @include light-appearance; }
+  body[data-theme="auto"] {
+    @include light-appearance;
+  }
 }
-  
+
 // -------------------------------------------- //
 
-html, body {
-    background-color: var(--bg);
-    color: var(--text);
+html,
+body {
+  background-color: var(--bg);
+  color: var(--text);
 }
-h1, h2, h3, h4, h5, h6 {
-    color: var(--headings);
+
+p,
+strong,
+b,
+em,
+small,
+li,
+hr,
+table,
+figcaption {
+  color: var(--text);
 }
-p, strong, b, em, small, li, hr, table, figcaption {
-    color: var(--text);
-}
-.highlight, pre code, blockquote {
+
+.highlight,
+pre code,
+blockquote {
   border-radius: 0.5em;
 }
+
 blockquote {
   background-color: var(--bg-secondary);
   border: 1px var(--border) solid;
 }
+
 a {
   color: var(--links);
 }
-*:target { background-color: var(--bg-secondary); }
+
+*:target {
+  background-color: var(--bg-secondary);
+}
 
 html.transition,
 html.transition *,
 html.transition *:before,
 html.transition *:after {
-    transition: all 250ms !important;
-    transition-delay: 0 !important;
+  transition: all 250ms !important;
+  transition-delay: 0 !important;
 }
 
 .theme-toggle {
@@ -150,13 +255,16 @@ html.transition *:after {
   color: var(--links);
   outline: none;
 }
+
 .theme-toggle:focus {
   outline: none;
 }
+
 .dashed {
   border-top: 1px var(--text) dashed;
   margin: 0.5em 0;
 }
+
 mark {
   padding: 0.4em;
   background-color: var(--highlight);
@@ -170,45 +278,53 @@ mark {
   font-size: 0.7em;
   font-family: "Roboto Mono", "Courier New", monospace;
 }
+
 .home-date {
   font-family: "Roboto Mono", "Courier New", monospace;
 }
+
 .post-list-item a {
   text-decoration: none;
 }
+
 .text-bold {
   font-weight: bold;
 }
+
 .text-upcase {
   text-transform: uppercase;
   letter-spacing: 1px;
 }
-p code, li code {
+
+p code,
+li code {
   background-color: var(--bg-secondary);
   padding: 0.2rem;
   color: var(--code-text);
   font-weight: bold;
 }
-.post-title {
-  margin-bottom:-1.5rem;
-}
+
 .project-title {
   margin-bottom: 0.8rem;
 }
+
 .credits {
   font-size: 0.8em;
   color: var(--text);
   margin: 8em auto -4em auto;
   text-align: center;
+
   a {
     color: var(--text);
     text-decoration: none;
     font-weight: bold;
   }
+
   a:hover {
     color: var(--links);
   }
 }
+
 .tag {
   font-family: "Roboto Mono", "Courier New", monospace;
   color: var(--text-secondary);
@@ -219,5 +335,4 @@ p code, li code {
   font-size: 0.7em;
   font-weight: bold;
   text-transform: lowercase;
-  //border: 1px solid var(--text-secondary);
 }
